argocd/infrastructure/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: whispr-prod
  labels:
    istio-injection: enabled  # -> Auto-injection Envoy

---
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    istio-injection: enabled  # -> Auto-injection Envoy
